<resources>
    <string name="app_name">MovieReviewsNYT</string>
    <string name="title_home">Lista Reseñas</string>
    <string name="title_dashboard">Mis Reseñas Favoritas</string>
    <string name="content_description">Image</string>
    <string name="example_tittle_review">Reseña de Ejemplo</string>
    <string name="reviewer_example">By Daniel Munoz</string>
    <string name="publication_date_example">Publicado 18–05–2023</string>
    <string name="title_list">Lista de Reseñas</string>
    <string name="title_favorites">Reseñas Favoritas</string>
    <string name="summary_short_example">..............................................................................................</string>
    <string name="article_url_example">https://www.google.com/</string>
    <string name="detail">Detalle Reseña</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="read_article">Lee El Articulo Aqui:</string>
    <string name="add_favorite">Agregar a favoritos</string>
</resources>